Added node-dirty and backbone support for the device listing.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "nib": "*",
         "arp": "*",
         "pcap": "*",
-        "wake_on_lan": "*"
+        "wake_on_lan": "*",
+        "dirty": "*"
     }
 }
