--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "homepage": "https://github.com/huijar/nodewol",
     "keywords": ["wol", "wake-on-lan"],
     "bin": {
-        "nodewol": "./app.js",
+        "nodewol": "./app.js"
     },
     "scripts": {
-        "start": "node ./app.js",
+        "start": "node ./app.js"
     },
     "dependencies": {
         "express": "3.0.5",
